# src/routes/auth/Login.js
@@ -3,22 +3,26 @@ const Error = require('../../modules/error');
 
 const Login = ({logger, config}) =>
   async function Login(req, res) {
-    return Auth.passport.client.authenticate('local', {session: false}, (err, account) => {
+    return await Auth.passport.client.authenticate('local', {session: false}, async (err, account) => {
       if (err || !account) {
         return Error.sendApiError(res, Error.API.UNAUTHORIZED);
       }
 
-      const payload = {
-        id: +account.id,
+      const credentialOptions = {
+        logger,
+        accessTokenSecret: config.ACCESS_TOKEN_SECRET,
+        accessTokenExpirationTime: config.ACCESS_TOKEN_EXPIRATION_MS,
+        refreshTokenExpirationTime: config.REFRESH_TOKEN_EXPIRATION_MS,
       };
 
-      const options = {
-        secret: config.TOKEN_SECRET,
-        expiresIn: config.JWT_EXPIRATION_MS,
-        logger: logger,
+      const credentials = await Auth.functions.getCredentials(+account.id, credentialOptions);
+
+      const response = {
+        access_token: credentials.accessToken,
+        refresh_token: credentials.refreshToken,
       };
 
-      return Auth.functions.getAccessToken(req, res, payload, options);
+      return res.status(200).json(response);
     })(req, res);
   };
 
