# src/routes/auth/Signup.js
@@ -1,7 +1,6 @@
 const Ajv = require('ajv');
 const Auth = require('../../modules/auth');
 const Error = require('../../modules/error');
-const Shared = require('../../modules/shared');
 
 const Signup = ({logger, config}) =>
   async function Signup(req, res) {
@@ -19,29 +18,26 @@ const Signup = ({logger, config}) =>
       salt: config.SALT_NUMBER,
     };
 
-    const response = await Auth.functions.createAccountFromEmailAndPassword(email, password, {}, signupOptions);
+    const account = await Auth.functions.createAccountFromEmailAndPassword(email, password, {}, signupOptions);
 
-    if (Shared.sendResponse.isError(response)) {
-      switch (response.value) {
-        case Auth.errors.DUPLICATE_EMAIL.error:
-          return Error.sendApiError(res, Auth.errors.DUPLICATE_EMAIL);
-        default:
-          return Error.sendApiError(res, Error.API.BAD_REQUEST);
-      }
+    if (account.error) {
+      return Error.sendApiError(res, account);
     }
 
-    const account = response.value;
+    const credentialOptions = {
+      logger,
+      accessTokenSecret: config.ACCESS_TOKEN_SECRET,
+      accessTokenExpirationTime: config.ACCESS_TOKEN_EXPIRATION_MS,
+      refreshTokenExpirationTime: config.REFRESH_TOKEN_EXPIRATION_MS,
+    };
+    const credentials = await Auth.functions.getCredentials(+account.id, credentialOptions);
 
-    const payload = {
-      id: parseInt(account.id, 10),
+    const response = {
+      access_token: credentials.accessToken,
+      refresh_token: credentials.refreshToken,
     };
 
-    const loginOptions = {
-      secret: config.TOKEN_SECRET,
-      expiresIn: config.JWT_EXPIRATION_MS,
-    };
-
-    return Auth.functions.getAccessToken(req, res, payload, loginOptions);
+    return res.status(200).json(response);
   };
 
 module.exports = Signup;
